# FantasyGolfSimulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arrow.blend  clock.c  clock.h  common.h  font.c  font.h  golf_ball.blend  main.c  text_box.c  text_box.h
build_time_generation/: bitmap_img.c  bitmap_meta.c  dvmono.fnt  save_standard_out.cmake  string_var.c
shaders/: font.fs  grid.fs  grid.gs  grid.vs  mesh.fs  mesh.vs  ui.fs  window_space.vs
